<resources>
    <string name="app_name">Nunaliit Mobile</string>
    <string name="couchDbService_label">Nunaliit Database Service</string>

    <string name="atlas_sync">Synchronize Atlas</string>
    <string name="atlas_manage">Remove Atlas</string>
    <string name="atlas_manage_cancel">Finish Removing Atlases</string>
    <string name="atlas_add">Add Atlas</string>
    <string name="search">Search</string>

    <string name="add_connection">Add Connection</string>
    <string name="connection">Connection</string>
    <string name="connection_created">"Connection Created"</string>
    <string name="connection_management_service">"Connection Management Service"</string>
    <string name="connections">Connections</string>
    <string name="cordova">Cordova</string>
    <string name="create_connection">CONNECT</string>
    <string name="database_service">Database Service</string>
    <string name="delete">Delete</string>
    <string name="manage_connections">Manage Connections</string>
    <string name="synchronization_completed">Synchronization Completed</string>
    <string name="synchronize">Synchronize</string>

    <string name="error_creating_connection">Error while creating connection</string>
    <string name="error_synchronization">Error during connection synchronization</string>
    <string name="error_synchronization_in_progress">Synchronization in progress</string>
    <string name="error_delete_atlas">Error deleting atlas</string>

    <string name="add_atlas_title">Add Atlas</string>
    <string name="add_atlas_positive">OK</string>
    <string name="add_atlas_negative">CANCEL</string>

    <string name="sync_in_background_button">Sync in background</string>

    <string name="sync_result_title">Sync Result</string>
    <string name="sync_result_positive">RELOAD ATLAS</string>
    <string name="sync_client_update">Local Documents Updated: %d / %d</string>
    <string name="sync_remote_update">Remote Documents Updated: %d / %d</string>
    <string name="sync_local_delete">Documents Deleted: %d</string>
    <string name="sync_remote_delete">Document Delete Requests: %d</string>

    <string name="delete_atlas_title">Remove Account</string>
    <string name="delete_atlas_message">Are you sure you want to remove the account from your device?</string>
    <string name="delete_atlas_positive">REMOVE</string>
    <string name="delete_atlas_negative">CANCEL</string>

    <string name="label_connection_name">CONNECTION NAME</string>
    <string name="label_local_docs_db_name">Documents database:</string>
    <string name="label_local_revs_db_name">Revisions database:</string>
    <string name="label_password">PASSWORD</string>
    <string name="label_url">URL</string>
    <string name="label_name">USER</string>
    <string name="label_user">EMAIL</string>

    <string name="nunaliit_logo">ᓄᓇᓖᑦ</string>
    <string name="nunaliit_title_welcome">Welcome to Nunaliit.</string>
    <string name="nunaliit_welcome_1">The Nunaliit Atlas Framework aims to make it easy to tell stories and highlight relationships between many different forms of information from a variety of sources, using maps as a central way to connect and interact with the data.</string>
    <string name="nunaliit_welcome_2">The Nunaliit Atlas Framework was born out of a multi-disciplinary research project led by Dr. Fraser Taylor, a Distinguished Research Professor in the department of Geography and Environmental Studies and director of the Geomatics and Cartographic Research Centre at Carleton University in Ottawa, Canada.</string>
    <string name="nunaliit_welcome_3">Research and development of Nunaliit is carried out and supported by a diverse team of individuals and organizations. We are available to assist with projects.</string>

    <string name="atlas_shared_pref">ca.carleton.gcrc.atlas</string>
    <string name="atlas_last_used">ca.carleton.gcrc.atlas.last_used</string>

    <string name="location_permission_title">Allow Location?</string>
    <string name="location_permission_text">Documents you create can be tagged with your current location. Enable location to enable document tagging.</string>
    <string name="ok">OK</string>

    <string name="sync_progress_downloading">Downloading Documents...</string>
    <string name="sync_progress_update_local">Updating Local Documents...</string>
    <string name="sync_progress_update_remote">Updating Remote Documents...</string>
</resources>
